Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,7 +6,7 @@
   },
   "site": {
     "title": "Ted Bergeron ",
-    "description": "Blogging about tech",
+    "description": "a blog about tech",
     "postsPerPage": "10"
   },
   "socialnetwork": {
